--- a/timeline/timeline.html
+++ b/timeline/timeline.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <title>Meenakshi B | Facebook</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- <link href="http://netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
@@ -358,7 +360,8 @@
                                                 placeholder="Whats in your mind today?"></textarea>
                                         </form>
                                         <footer class="panel-footer">
-                                            <button type="button" class="btn btn-info pull-right" onclick="addNewFeed('Meenakshi','0 mins ago','','../images/profile_pic.jpg',this.value)">Post</button>
+                                            <button type="button" class="btn btn-info pull-right"
+                                                onclick="addNewFeed('Meenakshi','0 mins ago','','../images/profile_pic.jpg',this.value)">Post</button>
                                             <!-- <ul class="nav nav-pills">
                                     <li><a href="#"><i class="fa fa-map-marker"></i></a></li>
                                     <li><a href="#"><i class="fa fa-camera"></i></a></li>
@@ -372,23 +375,29 @@
                             </div>
                         </div>
                         <div class="feed">
-                        
+
+                        </div>
                     </div>
-                    </div>
-                   
+
                 </div>
             </div>
-             </div>
+        </div>
     </div>
     </div>
-    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
+    <!-- <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> -->
+    <!-- <script type="text/javascript">
         $(document).ready(function () {
             $('.dropdown').dropdown();
         });
-    </script>
-        <script src="timeline.js"></script>
+    </script> -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+    <script src="timeline.js"></script>
 
 </body>
 
