--- a/timeline/timeline.html
+++ b/timeline/timeline.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Meenakshi B | Facebook</title>
+    <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -24,12 +24,12 @@
                         <div class="cover">
                             <div class="gray-shade"></div>
                             <figure>
-                                <img src="../images/cover_image.jpg" class="img-fluid" alt="profile cover">
+                                <img id="cover" src="" class="img-fluid" alt="profile cover">
                             </figure>
                             <div class="cover-body d-flex justify-content-between align-items-center">
                                 <div>
-                                    <img class="profile-pic" src="../images/profile_pic.jpg" alt="profile">
-                                    <span class="profile-name">Meenakshi B</span>
+                                    <img id="profile-pic" class="profile-pic" src="" alt="profile">
+                                    <strong><span id="profile-name"></span></strong>
                                 </div>
                                 <div class="d-none d-md-block">
                                     <button class="btn btn-primary btn-icon-text btn-edit-profile">
@@ -139,63 +139,63 @@
                                                 <div class="col-md-4">
                                                     <figure>
                                                         <img class="img-fluid"
-                                                            src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                                                            src="../images/avatar1.jpg"
                                                             alt="">
                                                     </figure>
                                                 </div>
                                                 <div class="col-md-4">
                                                     <figure>
                                                         <img class="img-fluid"
-                                                            src="https://bootdey.com/img/Content/avatar/avatar2.png"
+                                                            src="../images/avatar2.jpg"
                                                             alt="">
                                                     </figure>
                                                 </div>
                                                 <div class="col-md-4">
                                                     <figure>
                                                         <img class="img-fluid"
-                                                            src="https://bootdey.com/img/Content/avatar/avatar3.png"
+                                                            src="../images/avatar3.jpg"
                                                             alt="">
                                                     </figure>
                                                 </div>
                                                 <div class="col-md-4">
                                                     <figure>
                                                         <img class="img-fluid"
-                                                            src="https://bootdey.com/img/Content/avatar/avatar4.png"
+                                                            src="../images/avatar4.jpg"
                                                             alt="">
                                                     </figure>
                                                 </div>
                                                 <div class="col-md-4">
                                                     <figure>
                                                         <img class="img-fluid"
-                                                            src="https://bootdey.com/img/Content/avatar/avatar5.png"
+                                                            src="../images/avatar5.jpg"
                                                             alt="">
                                                     </figure>
                                                 </div>
                                                 <div class="col-md-4">
                                                     <figure>
                                                         <img class="img-fluid"
-                                                            src="https://bootdey.com/img/Content/avatar/avatar6.png"
+                                                            src="../images/avatar6.jpg"
                                                             alt="">
                                                     </figure>
                                                 </div>
                                                 <div class="col-md-4">
                                                     <figure class="mb-0">
                                                         <img class="img-fluid"
-                                                            src="https://bootdey.com/img/Content/avatar/avatar7.png"
+                                                            src="../images/avatar7.jpg"
                                                             alt="">
                                                     </figure>
                                                 </div>
                                                 <div class="col-md-4">
                                                     <figure class="mb-0">
                                                         <img class="img-fluid"
-                                                            src="https://bootdey.com/img/Content/avatar/avatar8.png"
+                                                            src="../images/avatar8.jpg"
                                                             alt="">
                                                     </figure>
                                                 </div>
                                                 <div class="col-md-4">
                                                     <figure class="mb-0">
                                                         <img class="img-fluid"
-                                                            src="https://bootdey.com/img/Content/avatar/avatar9.png"
+                                                            src="../images/avatar9.jpg"
                                                             alt="">
                                                     </figure>
                                                 </div>
@@ -211,9 +211,9 @@
                                         <div class="d-flex justify-content-between mb-2 pb-2 border-bottom">
                                             <div class="d-flex align-items-center hover-pointer">
                                                 <img class="img-xs rounded-circle"
-                                                    src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="">
+                                                    src="../images/avatar2.jpg" alt="">
                                                 <div class="ml-2">
-                                                    <p>Mike Popescu</p>
+                                                    <p>Mahadev Iyer</p>
                                                     <p class="tx-11 text-muted">12 Mutual Friends</p>
                                                 </div>
                                             </div>
@@ -233,9 +233,9 @@
                                         <div class="d-flex justify-content-between mb-2 pb-2 border-bottom">
                                             <div class="d-flex align-items-center hover-pointer">
                                                 <img class="img-xs rounded-circle"
-                                                    src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="">
+                                                    src="../images/avatar3.jpg" alt="">
                                                 <div class="ml-2">
-                                                    <p>Mike Popescu</p>
+                                                    <p>Mahadev Iyer</p>
                                                     <p class="tx-11 text-muted">12 Mutual Friends</p>
                                                 </div>
                                             </div>
@@ -255,9 +255,9 @@
                                         <div class="d-flex justify-content-between mb-2 pb-2 border-bottom">
                                             <div class="d-flex align-items-center hover-pointer">
                                                 <img class="img-xs rounded-circle"
-                                                    src="https://bootdey.com/img/Content/avatar/avatar4.png" alt="">
+                                                    src="../images/avatar4.jpg" alt="">
                                                 <div class="ml-2">
-                                                    <p>Mike Popescu</p>
+                                                    <p>Mahadev Iyer</p>
                                                     <p class="tx-11 text-muted">12 Mutual Friends</p>
                                                 </div>
                                             </div>
@@ -277,9 +277,9 @@
                                         <div class="d-flex justify-content-between mb-2 pb-2 border-bottom">
                                             <div class="d-flex align-items-center hover-pointer">
                                                 <img class="img-xs rounded-circle"
-                                                    src="https://bootdey.com/img/Content/avatar/avatar5.png" alt="">
+                                                    src="../images/avatar5.jpg" alt="">
                                                 <div class="ml-2">
-                                                    <p>John Doe1</p>
+                                                    <p>Lester Paulraj</p>
                                                     <p class="tx-11 text-muted">12 Mutual Friends</p>
                                                 </div>
                                             </div>
@@ -299,9 +299,9 @@
                                         <div class="d-flex justify-content-between mb-2 pb-2 border-bottom">
                                             <div class="d-flex align-items-center hover-pointer">
                                                 <img class="img-xs rounded-circle"
-                                                    src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="">
+                                                    src="../images/avatar6.jpg" alt="">
                                                 <div class="ml-2">
-                                                    <p>Mike Popescu</p>
+                                                    <p>Mahadev Iyer</p>
                                                     <p class="tx-11 text-muted">12 Mutual Friends</p>
                                                 </div>
                                             </div>
@@ -321,9 +321,9 @@
                                         <div class="d-flex justify-content-between">
                                             <div class="d-flex align-items-center hover-pointer">
                                                 <img class="img-xs rounded-circle"
-                                                    src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
+                                                    src="../images/avatar7.jpg" alt="">
                                                 <div class="ml-2">
-                                                    <p>Mike Popescu</p>
+                                                    <p>Mahadev Iyer</p>
                                                     <p class="tx-11 text-muted">12 Mutual Friends</p>
                                                 </div>
                                             </div>
@@ -356,18 +356,23 @@
                                 <div class="card-header">
                                     <div class="panel profile-info">
                                         <form>
-                                            <textarea class="form-control input-lg p-text-area" rows="2"
+                                            <textarea id="myText" class="form-control input-lg p-text-area" rows="2"
                                                 placeholder="Whats in your mind today?"></textarea>
                                         </form>
                                         <footer class="panel-footer">
-                                            <button type="button" class="btn btn-info pull-right"
-                                                onclick="addNewFeed('Meenakshi','0 mins ago','','../images/profile_pic.jpg',this.value)">Post</button>
-                                            <!-- <ul class="nav nav-pills">
-                                    <li><a href="#"><i class="fa fa-map-marker"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-camera"></i></a></li>
-                                    <li><a href="#"><i class=" fa fa-film"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-microphone"></i></a></li>
-                                </ul> -->
+                                                 <div class="col-sm-9 px-0" style="display: inline;">
+                                                    <ul class="ulclass ">
+                                                        <li class="text-center col-sm-3"><a href="#" onclick="getLocation()"><i class="fa fa-map-marker"></i></a></li>
+                                                        <li class="text-center col-sm-3"><a id="camera" href="#" onclick="">
+                                                            <input id="file-input" type="file" name="name"  onchange="readURL(this);" style="display: none;" />
+                                                            <i class="fa fa-camera"></i></a></li>
+                                                        <li class="text-center col-sm-3"><a href="#"><i class=" fa fa-film"></i></a></li>
+                                                        <li class="text-center col-sm-3"><a href="#"><i class="fa fa-microphone"></i></a></li>
+                                                        </ul>
+                                                 </div>
+                                            <button type="button" class="btn btn-info col-sm-2"
+                                                onclick="addNewFeed()">Post</button>
+                                            
                                         </footer>
                                     </div>
 
@@ -381,9 +386,12 @@
 
                 </div>
             </div>
+            <button class="revoke">Revoke</button>
         </div>
     </div>
     </div>
+    
+
     <!-- <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> -->
     <!-- <script type="text/javascript">
@@ -397,6 +405,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false&callback=initMap&key=AIzaSyDH03iAK_yzol3-PyyM5kT3m--noVqYiyY" async defer></script>
     <script src="timeline.js"></script>
 
 </body>
