FB api changes commented

--- a/login/login.html
+++ b/login/login.html
@@ -378,8 +378,8 @@
                                 <input type="password" class="form-control form-control-sm" id="inputPassword4">
                                 <a class="forgot-link" href="#">Forgot Password?</a>
                             </div>
-                            <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false"></div>
-                            <!-- <button type="submit" class="btn col-md- mt-4">Log In</button> -->
+                            <!-- <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false"></div> -->
+                            <button type="submit" onclick="location.href = '../timeline/timeline.html';" class="btn col-md- mt-4">Log In</button>
                         </div>
                     </form>
                 </div>
